UDIM image Texture doesn't Display properly #77586

Closed
opened 2020-06-07 23:21:11 +02:00 by Laurent Boucher · 16 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-06 14:18, hash: aed11c673e
Worked: bdda53fdb29d^ -- Caused by bdda53fdb2

Short description of error
UDIM textures is not working properly. I get a pink color in the viewport instead on all tiles but 1001, and in 1001 I get a distorted texture
lr4bnBB2dx.png

Exact steps for others to reproduce the error
UDIM_Issue.blend
Import a UDIM Texture and you will see that is will not show up correctly

Thanks a lot

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 1080/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.90.0 Alpha, branch: master, commit date: 2020-06-06 14:18, hash: `aed11c673e` Worked: bdda53fdb29d^ -- Caused by bdda53fdb2 **Short description of error** UDIM textures is not working properly. I get a pink color in the viewport instead on all tiles but 1001, and in 1001 I get a distorted texture ![lr4bnBB2dx.png](https://archive.blender.org/developer/F8592928/lr4bnBB2dx.png) **Exact steps for others to reproduce the error** [UDIM_Issue.blend](https://archive.blender.org/developer/F8592889/UDIM_Issue.blend) Import a UDIM Texture and you will see that is will not show up correctly Thanks a lot

Added subscriber: @Tilapiatsu

Added subscriber: @Tilapiatsu
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

Textures are missing, mind sharing these along the .blend in a zip?

Textures are missing, mind sharing these along the .blend in a zip?

Added subscriber: @mendezcode

Added subscriber: @mendezcode

Can also replicate. Scene ZIP attached.

System Information:
Windows 10 64-bits / Nvidia GTX 1080Ti (445.87) / AMD ThreadRipper 2970wx
Blender Version: 2.90.0-9f7d84b656fb-windows64

2.83.png 2.90.png

CubeUDIMs.zip

Can also replicate. Scene ZIP attached. **System Information:** Windows 10 64-bits / Nvidia GTX 1080Ti (445.87) / AMD ThreadRipper 2970wx Blender Version: 2.90.0-9f7d84b656fb-windows64 ![2.83.png](https://archive.blender.org/developer/F8602999/2.83.png) ![2.90.png](https://archive.blender.org/developer/F8603001/2.90.png) [CubeUDIMs.zip](https://archive.blender.org/developer/F8602998/CubeUDIMs.zip)

Sorry I have forgotten the Maps, but the zip file from @mendezcode is valid, It is really showing well the issue, Opening the same file with two different version of blender doesn't give the same result.

Thanks for sharing the good file!

Sorry I have forgotten the Maps, but the zip file from @mendezcode is valid, It is really showing well the issue, Opening the same file with two different version of blender doesn't give the same result. Thanks for sharing the good file!

Added subscriber: @DarkKnight

Added subscriber: @DarkKnight

Can confirm with my character also. First uv displays corretly but others are pink.

Can confirm with my character also. First uv displays corretly but others are pink.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

Confirmed, checking...

Confirmed, checking...
Clément Foucault was assigned by Philipp Oeser 2020-06-11 09:32:51 +02:00
Member

Added subscriber: @fclem

Added subscriber: @fclem
Member

Caused by bdda53fdb2

CC @fclem

Caused by bdda53fdb2 CC @fclem

This issue was referenced by 7e43bbb790

This issue was referenced by 7e43bbb790d534eb0f7885e7cc793b12e7681d3f

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'

Thanks @fclem for the fix, everything is back to normal now :)

Thanks @fclem for the fix, everything is back to normal now :)
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#77586
No description provided.