Fix T77586 EEVEE: UDIM image Texture doesn't Display properly