source/blender/gpu/intern/gpu_draw.c
@@ -912,6 +912,11 @@ GPUTexture *GPU_texture_from_blender(Image *ima, ImageUser *iuser, ImBuf *ibuf, 
 
   GPU_texture_orig_size_set(*tex, ibuf_intern->x, ibuf_intern->y);
 
+  if (textarget == GL_TEXTURE_1D_ARRAY) {
+    /* Special for tile mapping. */
+    GPU_texture_mipmap_mode(*tex, false, false);
+  }
+
   return *tex;
 #endif
   return NULL;
